cabal-version: 3.0
name:          jambhala
version:       0.3.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:       MIT
license-file:  LICENSE
author:        Ian Burzynski
maintainer:    23251244+iburzynski@users.noreply.github.com

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common
  default-language: Haskell2010
  build-depends:    base ^>=4.14.3.0
  mixins:           base hiding (Prelude)
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -Wno-orphans -Wno-unused-local-binds

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:             common
  exposed-modules:
    Contracts
    Contracts.WATMint
    Jambhala.CLI
    Jambhala.Plutus
    Jambhala.Utils
    Prelude

  -- Add new contracts here, i.e.:
  -- Contracts.MyContract

  other-modules:
    Contracts.Samples.CustomTyped
    Contracts.Samples.ForwardMinting
    Contracts.Samples.FreeMinting
    Contracts.Samples.NFT
    Contracts.Samples.ParamVesting
    Contracts.Samples.SignedMinting
    Contracts.Samples.Simple
    Contracts.Samples.SimpleGuessing
    Contracts.Samples.SimpleTyped
    Contracts.Samples.Vesting
    Jambhala.CLI.Emulator
    Jambhala.CLI.Emulator.Types
    Jambhala.CLI.Export
    Jambhala.CLI.Parsers
    Jambhala.CLI.Types
    Jambhala.CLI.Update
    Jambhala.CLI.Update.Parsers

  -- Sample contracts:
  hs-source-dirs:     src
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-ledger-core
    , cardano-node-emulator
    , containers
    , data-default
    , extra
    , foldl
    , freer-extras
    , freer-simple
    , lens
    , megaparsec
    , mtl
    , optparse-applicative
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-constraints
    , plutus-tx-plugin
    , row-types
    , serialise
    , text
    , time
    , turtle

  -- Jambhala dependencies:
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies

-- Allows promotion of types to "kinds", enabling more expressive type-level programming (required for all Plutus contracts):
-- Allows automatic derivation of certain typeclasses (like FromJSON/ToJSON):
-- Allows defining typeclass instances for type synonyms:
-- Allows post-fix style qualified import declarations:
-- Allows writing type signatures for methods in typeclass instances:
-- A syntactic convenience for writing single-argument lambdas containing case expressions (used by Jambhala's utilities):
-- Allows more than one type parameter in class and instance declarations (required to lift parameters in parameterized validators):
-- Allows more readable representations of large integers (i.e. 1_000_000), useful for lovelace quantities:
-- Allows construction of Text and other string-like values as string literals:
-- A syntactic convenience for working with record values (used by Jambhala's utilities):
-- Allows referencing type variables in multiple scopes (required to lift parameters in parameterized validators):
-- Required for all Plutus contracts to translate between Plutus and Haskell:
-- Provides a convenient way to disambiguate type variables inline:
-- Allows type-level functions (used in Jambhala's ValidatorEndpoints & MintingEndpoint classes):
executable jamb
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  build-depends:  jambhala
